# Head

- When pruning cells, now checks for circular references
- Added a better error message if expanding array formulae fails

# 0.2.25 - 2014 May 23rd

- Implemented the LN function in ruby and C
- Tweaks to the array formulae code to try and speed it up
- Tightened dependency version numbers in gemspec to eliminate warnings when building gem

# 0.2.24 - 2014 May 16th

- Fixed the simplification of SUMIFS when it has errors as arguments

# 0.2.23 - 2014 May 7th

- Fixed the simplification of SUMIFS when a criteria is blank
- Fixed the conversion of INDEX formulae that return arrays when they are inside array formulae

# 0.2.22 - 2014 April 27th

- Implemented a reset method in the ruby code so can perform repeated calculations on the same instance (already implemented in the generated C code)
- Added named references to generated ruby code (already implemented in generated C code)
- Added settting to allow the inline_formulae_that_are_only_used_once method to be skipped

# 0.2.21 - 2014 April 27th

- Fix ruby version of SUMIFS to match number criteria against string check values (already fixed in C version)
- bin/excel_to_c and bin/excel_to_ruby options changed and added -n option to keep named references
- default behaviour when named_references_to_keep = :all but no named references is then to keep all cells

# 0.2.20 - 2014 March 31st

- Attempts to simplify some SUMIFS statements, even if they can't be calculated entirely at compile time
- Removed redundant ReplaceFormulaeWithCalculatedValues class and test - The underlying MapFormulaeToValues class is now used directly
- Fixed comparisons to be able to compare values of different types (e.g., true is always greater than String in Excel)
- Added an ExcelToTest class which generates a test file for a workbook, but does not generate the code to implement the workbook.

# 0.2.19 - 2014 March 18th

- Fixed a bug in ReplaceArithmeticOnRangesAst where there was too much mapping going on