@@ -2,6 +2,7 @@
 
 - When pruning cells, now checks for circular references
 - Added a better error message if expanding array formulae fails
+- Now doesn't mistakenly inline sheet specific named references
 
 # 0.2.25 - 2014 May 23rd
 
